# risico-aggregation

./: .gitignore  Cargo.toml  README.md  py_risico_aggregation.py  pyproject.toml
.github/workflows/: CI.yml
python/: __init__.py  rust_risico_aggregation.py  test_wrapper.py  wrapper.py  wrapper_example.py
python/risico_aggregation/: __init__.py  risico_aggregation.py  test_wrapper.py
risico_aggregation/: __init__.py
src/: config.rs  dump.rs  lib.rs  main.rs  netcdf.rs  netcdf_output.rs  pyproject.toml  python.rs  shapefile.rs  sqlite.rs  sqlite_stats.rs
