[package]
name = "risico_aggregation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
euclid = "0.22.7"
geo-rasterize = "0.1.2"
geo-types = "0.7.15"
glob = "0.3.1"
noisy_float = "0.2.0"
netcdf = "0.10.5"
ndarray = "0.16.1"
rayon = "1.6.1"
netcdf-sys = { version = "0.8.1", features = ["static"] }
netcdf-src = "0.4.1"

shapefile = { version = "0.6.0", features = ["geo-types"] }
cftime-rs = { git = "https://github.com/CIMAFoundation/cftime-rs-no-cdylib" }
kolmogorov_smirnov = "1.1.0"
rusqlite = { version = "0.33.0", features = ["chrono", "bundled"] }
strum = { version = "0.26.3", optional = false }
strum_macros = { version = "0.26.4", optional = false }
clap = { version = "4.5.27", features = ["cargo", "derive"] }
clap_derive = "4.5.24"

serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.9.33"
serde_json = "1.0.138"
zstd = "0.13.2"


[[bin]]
name = "risico_aggregation"
path = "src/main.rs"

[[bin]]
name = "risico_aggregation_dump"
path = "src/dump.rs"
