[package]
name = "risico_aggregation"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["cli"]

cli = [
    "clap",
    "clap_derive",
    "flate2",
    "serde",
    "serde_yaml",
    "netcdf",
    "netcdf-sys",
    "netcdf-src",
]
python = ["pyo3", "numpy"]


[dependencies]
ndarray = "0.16.1"
chrono = { version = "0.4.23", features = ["serde"] }
euclid = "0.22.7"
geo-rasterize = "0.1.2"
geo-types = "0.7.15"
wkt = "0.12.0"
geo = "0.29.3"
glob = "0.3.1"
noisy_float = "0.2.0"
rayon = "1.6.1"

shapefile = { version = "0.6.0", features = ["geo-types"] }
cftime-rs = { git = "https://github.com/CIMAFoundation/cftime-rs-no-cdylib" }
kolmogorov_smirnov = "1.1.0"
rusqlite = { version = "0.33.0", features = ["chrono", "bundled"] }
strum = { version = "0.26.3", optional = false }
strum_macros = { version = "0.26.4", optional = false }


# cli
netcdf = { version = "0.10.5", optional = true }
netcdf-sys = { version = "0.8.1", features = ["static"], optional = true }
netcdf-src = { version = "0.4.1", optional = true }
clap = { version = "4.5.28", features = ["cargo", "derive"], optional = true }
clap_derive = { version = "4.5.28", optional = true }
flate2 = { version = "1.0.35", optional = true }
serde = { version = "1.0.130", features = ["derive"], optional = true }
serde_yaml = { version = "0.9.33", optional = true }


# Python bindings
pyo3 = { version = "0.23.4", features = ["extension-module"], optional = true }
numpy = { version = "0.23.0", optional = true }
