[build-system]
requires = ["maturin>=0.12"]
build-backend = "maturin"


[project]
name = "risico_aggregation"
version = "0.1.0"
description = "A Python wrapper for my Rust algorithm"
#authors = "Mirko D'Andrea"

[tool.maturin]
# Build artifacts with the specified Cargo profile
profile = "release"
# List of features to activate
features = ["python"]
# Activate all available features
all-features = false
no-default-features = true
packages = ["python"]
include = ["python/**/*"]
