[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"


[project]
name = "risico_aggregation"
requires-python = ">=3.8"
version = "0.1.0"
description = "A Python wrapper for my Rust algorithm"
#authors = "Mirko D'Andrea"


[tool.maturin]
# Build artifacts with the specified Cargo profile
profile = "release"
# List of features to activate
features = ["python"]
# Activate all available features
all-features = false
no-default-features = true
python-source = "python"
module-name = "risico_aggregation._lib"
